# ownly

./: .editorconfig  .gitignore  README.md  eslint.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  deploy-ownly2.yml
docs/: fast-join.md
ndn/: go.mod  go.sum
ndn/app/: app.go  boot_sync.go  encrypt.go  identity_keys.go  repo.go  schema.tlv  schema.tlv2  schema.trust  schema.trust2  testbed.go  workspace.go
ndn/app/tlv/: definitions.go  zz_generated.go
openmls-lite/: .gitignore  Cargo.toml
openmls-lite/src/: lib.rs  main.rs
src/: App.vue  main.ts  services.d.ts
src/components/: InvitePeopleModal.vue  InviteWorkspaceModal.vue  ModalComponent.vue  NavBar.vue  QrModal.vue
src/components/files/: MarkdownViewer.vue  MilkdownEditor.vue  PdfViewer.vue  RevealSlidesViewer.vue
src/components/home/: CreateWorkspaceModal.vue  IdentityKeyManager.vue  JoinWorkspaceModal.vue  LeaveWorkspaceModal.vue
src/components/landing/: DemoSidebarWorkspace.vue  LandingLogin.vue
src/node/: headless.ts
src/services/: event-bus.ts  fast-join.ts  mls-identity.ts  ndn.ts  openmls-lite.ts  svs-provider.ts  types.ts  workspace-invite.ts  workspace-proj.ts  workspace.ts
src/services/database/: boot_db.ts  boot_db_browser.ts  boot_db_node.ts  keychain_js.ts  store_js.ts  (+1 more)
src/utils/: bundler.ts  email.ts  identity-errors.ts  identity.ts  qr-crypto.ts  sanitize.ts  toast.ts
src/views/: DashboardView.vue  ProjectFileView.vue  SpaceDiscussView.vue
src/wasm/: openmls_lite.d.ts  openmls_lite.js  openmls_lite_bg.wasm  openmls_lite_bg.wasm.d.ts
